fixed image stretch in pdp

--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -24,7 +24,6 @@
 }
 
 .scrollingimage{
-    width: inherit;
     height: inherit;
 }
 
